[package]
name = "cnmo-level-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnmo-parse = { path = "../cnmo-parse", features = ["level_data", "serde"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
