[package]
name = "cnmo_level_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnmo-parse = { path = "../cnmo-parse", features = ["level_data", "serde"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
eframe = { version = "0.20.1", features = ["wgpu"] }
rfd = "0.10.0"
log = { version = "0.4.17", features = ["std"] }
image = "0.24.5"
cgmath = "0.18.0"
bytemuck = "1.12.3"
