[package]
name = "cnmo-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
level_data = ["dep:num-traits", "dep:num-derive"]
serde = ["dep:serde", "dep:base64"]

[dependencies]
bytebuffer = "2.0.1"
thiserror = "1.0"
num-traits = { version = "0.2", optional = true }
num-derive = { version = "0.3", optional = true }
serde = { version = "1.0.151", features = ["derive"], optional = true }
base64 = { version = "0.20.0", optional = true }
