[package]
name = "cnmo-parse"
version = "0.1.1"
edition = "2021"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
description = "Utility to easily parse CNM Online game files"
repository = "https://github.com/wyatt-radkiewicz/cnm-online-editor"
readme = "README.md"
documentation = "https://docs.rs/cnmo-parse"

[features]
level_data = ["dep:num-traits", "dep:num-derive"]
serde = ["dep:serde", "dep:base64"]

[dependencies]
bytebuffer = "2.0.1"
thiserror = "1.0"
num-traits = { version = "0.2", optional = true }
num-derive = { version = "0.3", optional = true }
serde = { version = "1.0.151", features = ["derive"], optional = true }
base64 = { version = "0.20.0", optional = true }
